# text-processing-service

./: .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
data/: service.db
src/: api.py  filter.py  pipeline.py  processor.py  rate_limiter.py
src/advance_features/: async_processing.py  distributed.py  observability.py  persistence.py
streamlit_app/: app.py
streamlit_app/pages/: 01_Overview.py  02_API_Playground.py  04_Tests_Runner.py
tests/: conftest.py  test_async_processing.py  test_distributed_mode.py  test_filter.py  test_integration.py  test_observability.py  test_performance.py  test_persistence.py  test_pipeline.py  test_processor.py  test_rate_limiter.py
