

# pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-processing-service"
version = "0.1.0"
description = "Streaming text processing service with observability, persistence, async mode, and distributed mode."
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = { text = "MIT" }
authors = [{ name = "Vaibhav Bansal" }]

dependencies = [
  "fastapi>=0.103.0,<1.0.0",
  "uvicorn[standard]>=0.23.0,<1.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "httpx>=0.24.0,<1.0.0",
  "redis>=5.0.0,<6.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0,<9.0.0",
  "pytest-asyncio>=0.21.0,<1.0.0",
  "pytest-env>=1.1.0,<2.0.0",
  "ruff>=0.5.0,<1.0.0",
  "black>=24.0.0,<26.0.0",
  "mypy>=1.8.0,<2.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

markers = [
  "integration: integration level tests",
  "performance: performance tests",
  "asyncio: async tests",
  "async_integration: async integration tests",
]

# pytest-asyncio config
asyncio_mode = "auto"

# If you want pytest-env to always set env vars during tests,
# keep this block; otherwise delete it entirely.
env = [
  "ASYNC_MODE=0",
  "REDIS_PARTITION_POLICY=fail_closed",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
src = ["src", "tests"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = "src"
files = ["src", "tests"]
